# agentic-stock-analyzer

./: .env.template  .gitignore  .pre-commit-config.yaml  Makefile  NOTEBOOKS.md  README.md  TEST_SUMMARY.md  cli.py  demo.py  examples.py  lecture01.ipynb  lecture02.ipynb  lecture03.ipynb  lecture04.ipynb  lecture05.ipynb  main.py  pyproject.toml  run_tests.py  test_sequence_diagram.ipynb
.cursor/commands/: README.md  commit-and-pr.md  commit.md  make.md  plan.md  todo.md
.kiro/settings/: mcp.json
.kiro/specs/agentic-stock-analyzer/: design.md  requirements.md  tasks.md
.logfire/: pyproject.toml
common/: __init__.py  check_env.py  config.py  models.py  tools.py  utils.py
lecture01/: __init__.py  agent.py  main.py
lecture02/: __init__.py  agent.py  main.py
lecture03/: __init__.py  agent.py  main.py
lecture04/: __init__.py  agent.py  main.py
lecture05/: __init__.py  agent.py  main.py  stock_a2a_server.py
tests/: __init__.py  conftest.py  fixtures.py  test_agent_integration.py  test_config.py  test_end_to_end.py  test_models.py  test_utils.py
