[project]
name = "tikal-lecture-communication-patterns"
version = "0.1.0"
description = "Demo project for progressive stock analysis with AI agents"
authors = [
    {name = "Amit Goldi", email = "amitgoldi@example.com"}
]
# readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "logfire[httpx]>=4.3.3",
    "pydantic-ai-slim[logfire,openai,tavily]>=0.0.49",
    "python-dotenv>=1.0.0",
]

[project.scripts]
lecture01 = "lecture01.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common", "lecture01"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
