[project]
name = "tikal-lecture-communication-patterns"
version = "0.1.0"
description = "Demo project for progressive stock analysis with AI agents"
authors = [
    {name = "Amit Goldi", email = "amitgoldi@example.com"}
]
# readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "logfire[httpx]>=4.3.3",
    "pydantic-ai-slim[logfire,openai,tavily,a2a]>=0.0.49",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
lecture01 = "lecture01.main:main"
lecture02 = "lecture02.main:main"
lecture03 = "lecture03.main:main"
lecture04 = "lecture04.main:main"
lecture05 = "lecture05.main:main"

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=3.0.0",
    "types-requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common", "lecture01", "lecture02", "lecture03", "lecture04", "lecture05"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
